load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "libarmgpuinfo",
    srcs = ["libgpuinfo.cpp"],
    hdrs = ["libgpuinfo.hpp"],
    visibility = ["//:__subpackages__"],
)

cc_binary(
    name = "arm-gpu-info",
    srcs = ["arm_gpuinfo.cpp"],
    visibility = ["//:__subpackages__"],
    deps = [":libarmgpuinfo"],
)
